--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</div>
 	<div data-role="content">
 		<div data-role="collapsible-set">
-            <div data-role="collapsible" data-collapsed="true">
+            <div id="pruebaSQL" data-role="collapsible" data-collapsed="true">
                 <h3>
                     16/02/2013
                 </h3>
