--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</div>
 	<div data-role="content">
 		<div data-role="collapsible-set">
-            <div id="pruebaSQL" data-role="collapsible" data-collapsed="true">
+            <div  data-role="collapsible" data-collapsed="true">
                 <h3>
                     16/02/2013
                 </h3>
@@ -70,7 +70,9 @@
                 <strong>Estancia:</strong> Z<br />
             </div>
             
-        </div>		
+        </div>	
+        
+        <a data-role="button" id="prueSQL">SQL</a>	
 	</div>
 	<div data-role="footer" data-position="fixed">
 		<div data-role="navbar" data-iconpos="top">
