--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div data-role="page" id="page">
 	<div data-role="header">
-		<h1>Reservaciones</h1>
+		<h1>Reservacionessswefw</h1>
 	</div>
 	<div data-role="content">	
 		<ul data-role="listview" data-inset="true">
